# mito-motility-2024

./: .gitignore  LICENSE  README.md  calculate_gini.py  cellprofiler_output_analyser.py  trackmate_analyser.ipynb
edge_spot_analyser/: COMPLETE_PIPELINE_REFERENCE.md  File_Fig_structure.xlsx  LICENSE  MODULE_11_DEFINITIVE.md  QUICKSTART.md  README.md  config.xlsx  config_V3.xlsx  config_round2.xlsx  config_round2_V3.xlsx  params.csv  params_example.json  pyproject.toml  robust_background_implementation (1).py
edge_spot_analyser/example_CP_output/24111_siRNA/: Image.csv
edge_spot_analyser/example_CP_output/241223_siRNA_motor_JNK_wt_DRH/: Image.csv
edge_spot_analyser/pipeline_files/: 231115_combined_pipeline_new_nomito_fixed_moments.cpproj  231115_combined_pipeline_new_nomito_fixed_moments.json
edge_spot_analyser/src/edge_spot_analyser/: __init__.py  aggregation.py  figure_aggregation.py  io_utils.py  measurements.py  pipeline.py  plotting.py  segmentation.py  validate_pipeline.py
edge_spot_analyser/tests/: test_measurements.py  test_segmentation.py
