[project]
name = "edge-spot-analyser"
version = "0.1.0"
description = "Python port of CellProfiler pipeline for analyzing mitochondrial distribution around nuclei"
authors = [
    {name = "William Grant"},
]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scikit-image>=0.18.0",
]

[project.optional-dependencies]
yaml = [
    "pyyaml>=5.4.0",
]
dev = [
    "ruff>=0.1.0",
]

[project.scripts]
edge-spot-pipeline = "edge_spot_analyser.pipeline:main"
edge-spot-validate = "edge_spot_analyser.validate_pipeline:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
